TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix installer (after configuration UI)
 * Add module for relaying events
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)

2007-12-16 MickeM
 + A lot of new features in the LUA module only "arguments" missing (as well as exposing more of the API)
 * Changed some exceptions that were thrown wrong

2007-12-11 MickeM
 + Added support for index-lookups of PDH counters (hopefully *all* local problems are now fixed (yeah right))

2007-12-10 MickeM
 + Added intial draft for LUA module

2007-12-09 MickeM
 + Added a check if the service is started when running with /test so you get a warning
 + Improved the socket thread with:
    * a default-catch
    * If the socket failes to start we still wait for it to shut down (no error message)
 + Added first version of the NSCA agent (NSCAgent.dll)
   (no encryption support as of yet, but will come)

2007-12-04 MickeM
 ! 0.3.0 Released

2007-12-01 MickeM
 * Fixed issue with date formating in FILEAGE

2007-11-29 MickeM
 * Fixed issue with date formating in FILEAGE

2007-11-28 MickeM
 ! 0.3.0 RC-1
 * Fixed some UNICODE issues with process-listings
 + Added an error message if the "detected" process enumeration method is not available.
 + Fixed some more unicode issues Password encrypt/decrypt: #107
 * Fixed unicode issues with "external programs" #109
 * Fixed so default string for check_nt:s FILEAGE command is "delta" is 5 minutes ago (and not absolute ie. 1970...), Issue #39
 + added support for  <date strings> to check_nt:s FILEAGE command, Issue #39
    append: .<date string> if you want to use a "custom date" like so: ... -v FILEAGE -l c:\\windows,Date: %Y-%m-%d %H:%M:%S" -w 5 -c 6 ...
    Only the above listed %<char> works, and default to 0 so might not be to pretty but works...

2007-11-26 MickeM
 + Fixed a socket issue (erroneously reported "Could not read NSClient packet from socket :(")